--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,17 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>gulimall-common</module>
         <module>gulimall-ware</module>
         <module>gulimall-coupon</module>
         <module>gulimall-member</module>
         <module>gulimall-order</module>
         <module>gulimall-product</module>
+        <module>gulimall-gateway</module>
         <module>renren-fast</module>
         <module>renren-generator</module>
-        <module>gulimall-common</module>
+        <module>gulimall-third-party</module>
+
     </modules>
 
 </project>
